--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
     "firebase": "^7.13.1",
+    "globalize": "^1.5.0",
+    "moment": "^2.24.0",
     "next": "9.3.3",
     "react": "16.13.1",
+    "react-big-calendar": "^0.24.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
