--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
+    "@types/chartjs": "0.0.31",
+    "@types/react-chartjs-2": "^2.5.7",
+    "chart.js": "^2.9.3",
     "firebase": "^7.13.1",
     "globalize": "^1.5.0",
     "moment": "^2.24.0",
     "next": "9.3.3",
+    "query-string": "^6.11.1",
     "react": "16.13.1",
     "react-big-calendar": "^0.24.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
