--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^2.9.3",
     "firebase": "^7.13.1",
     "globalize": "^1.5.0",
+    "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "next": "9.3.3",
     "query-string": "^6.11.1",
