--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "import": "ts-node importer/sanify.ts"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.8",
@@ -26,6 +27,7 @@
     "react-big-calendar": "^0.24.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "16.13.1",
+    "ts-node": "^8.8.2",
     "yup": "^0.28.3"
   },
   "devDependencies": {
