--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve"
+    "isolatedModules": false,
+    "jsx": "preserve",
+    "downlevelIteration": true
   },
   "exclude": [
     "node_modules"
