--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "import": "ts-node importer/sanify.ts"
+    "import": "ts-node importer/sanify.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.8",
@@ -19,6 +20,7 @@
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-beta.1",
     "globalize": "^1.5.0",
+    "jest": "^25.2.7",
     "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "next": "9.3.3",
@@ -31,8 +33,10 @@
     "yup": "^0.28.3"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.9.8",
     "@types/react": "^16.9.31",
+    "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
   }
 }
