--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-chartjs-2": "^2.5.7",
     "@types/yup": "^0.26.34",
     "chart.js": "^2.9.3",
+    "child-process": "^1.0.2",
     "firebase": "^7.13.1",
+    "firebase-admin": "^8.10.0",
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-beta.1",
     "globalize": "^1.5.0",
